# gen-ai-bedrock-support

./: .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
bedrock_support/: __init__.py
